@@ -6,10 +6,12 @@ qlcplus (4.14.2) stable; urgency=low
   * engine: input profiles are now loaded from project folder too
   * engine: fix RGB Matrix color lost while editing (thanks to Jurrie Overgoor)
   * engine: fix RGB Matrix dimmer control mode on generic dimmers
+  * engine: fix EFX duration change when asymmetrical
   * UI/Fixture Remap: include channel modifiers when fixture model and mode are the same
   * Virtual Console: add an option to hide Grand Master (thanks to Jurrie Overgoor)
   * Plugins/DMX USB: fix crash with some FTDI adapters
   * Plugins/DMX USB: improve Open DMX timer accuracy (thanks to Basil Hussain)
+  * Web Access: improved multiple connections handling (thank to Jurrie Overgoor)
   * Input profiles: added M-Wave SMC Mixer
   * New fixtures: Eurolite LED TMH-40, Stairville HF-900 Haze Fogger (thanks to thegasta)
   * New fixtures: Sagitter Prince, Sagitter Lite Beam 5R, Sagitter ARS 1500FC (thanks to Alessandro Caseti)
